--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<html></html>
+<html>
+    <div class="container">
+        <h1>What should I eat tonight?</h1>
+
+        <button class="getFood">Gimme something to eat</button>
+    </div>
+
+    <footer>
+        <script src="script.js"></script>
+    </footer>
+</html>
