created recipe container which stores the recipe info we get back. Wrote a fetch that grabs a random meal from the api and prints its name to the recipe container inner HTML.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <button class="getFood">Gimme something to eat</button>
     </div>
 
+    <div class="recipeContainer"></div>
+
     <footer>
         <script src="script.js"></script>
     </footer>
