--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <html>
-    <div class="container">
+    <head>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="styles.css" />
+    </head>
+    <div class="container jumbotron text-center">
         <h1>What should I eat tonight?</h1>
 
-        <button class="getFood">Gimme something to eat</button>
+        <button class="getFood btn-primary">Gimme something to eat</button>
     </div>
-
-    <div class="recipeContainer"></div>
+    <div class="recipeContainer container"></div>
 
     <footer>
         <script src="script.js"></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+            integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+            crossorigin="anonymous"
+        ></script>
     </footer>
 </html>
